--- a/trunk/res/layout/activity_register.xml
+++ b/trunk/res/layout/activity_register.xml
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Full Name" />
+            android:text="Name" />
         <!--  Name TextField -->
         <EditText
             android:id="@+id/registerName"
@@ -67,17 +67,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
             android:text="Register" />
- 
-        <!--  Link to Login Screen -->
-        <Button
-            android:id="@+id/btnLinkToLoginScreen"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dip"
-            android:background="@null"
-            android:text="Already registred. Login Me!"
-            android:textColor="#21dbd4"
-            android:textStyle="bold" />
     </LinearLayout>
  
 </ScrollView>
