--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
             android:layout_marginTop="40dip"
             android:background="@null"
             android:text="I don&apos;t have account. Register Me!"
-            android:textColor="#21dbd4"
+            android:textColor="#ff6a00"
             android:textStyle="bold" />
     </LinearLayout>
  
