--- a/trunk/res/layout/activity_login.xml
+++ b/trunk/res/layout/activity_login.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#3b3b3b" >
+    android:layout_height="fill_parent">
  
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dip" >
         <!--  View Title Label -->
@@ -24,7 +23,7 @@
             android:text="Email" />
         <!--  Email TextField -->
         <EditText
-            android:id="@+id/loginEmail"
+            android:id="@+id/edt_login_email"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
  
@@ -36,13 +35,20 @@
             android:text="Password" />
         <!--  Password TextField -->
         <EditText
-            android:id="@+id/loginPassword"
+            android:id="@+id/edt_login_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:password="true" />
  
         <!--  Error message -->
-        <TextView android:id="@+id/login_error"
+
+        <CheckBox
+            android:id="@+id/cb_login_remember"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remember me" />
+
+        <TextView android:id="@+id/tv_login_error"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#e30000"
@@ -50,23 +56,13 @@
                     android:textStyle="bold"/>
  
         <!--  Login Button -->
+
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btn_login_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
             android:text="Login" />
- 
-        <!--  Link to Registration Screen -->
-        <Button
-            android:id="@+id/btnLinkToRegisterScreen"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dip"
-            android:background="@null"
-            android:text="I don&apos;t have account. Register Me!"
-            android:textColor="#ff6a00"
-            android:textStyle="bold" />
     </LinearLayout>
  
 </ScrollView>
