--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#3b3b3b" >
+    android:layout_height="fill_parent" >
  
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dip" >
         <!--  View Title Label -->
@@ -24,9 +23,10 @@
             android:text="Name" />
         <!--  Name TextField -->
         <EditText
-            android:id="@+id/registerName"
+            android:id="@+id/edt_register_name"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text" />
  
         <!--  Email Label -->
         <TextView
@@ -35,9 +35,10 @@
             android:text="Email" />
         <!--  Email TextField -->
         <EditText
-            android:id="@+id/registerEmail"
+            android:id="@+id/edt_register_email"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress" />
  
         <!--  Password Label -->
         <TextView
@@ -47,11 +48,24 @@
             android:text="Password" />
         <!--  Password TextField -->
         <EditText
-            android:id="@+id/registerPassword"
+            android:id="@+id/edt_register_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:password="true" />
+            android:inputType="textPassword" />
  
+        <!--  Password Repeat Label -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dip"
+            android:text="Repeat Password" />
+        <!--  Password TextField -->
+        <EditText
+            android:id="@+id/edt_register_password_repeat"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword" />
+        
         <!--  Error message -->
         <TextView android:id="@+id/register_error"
                     android:layout_width="fill_parent"
@@ -62,7 +76,7 @@
  
         <!--  Login Button -->
         <Button
-            android:id="@+id/btnRegister"
+            android:id="@+id/btn_register_register"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
