--- a/trunk/res/layout/fragment_vehicle.xml
+++ b/trunk/res/layout/fragment_vehicle.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/TextView01"
+        android:id="@+id/tv_vehicle_information"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -14,38 +14,38 @@
         android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/edt_vehicle_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/TextView01"
-        android:ems="10" >
+        android:layout_below="@+id/tv_vehicle_information"
+        android:ems="5" >
 
         <requestFocus />
     </EditText>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edt_vehicle_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText1"
+        android:layout_below="@+id/edt_vehicle_name"
         android:ems="10" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/edt_vehicle_brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/edt_vehicle_year"
         android:ems="10" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/edt_vehicle_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/edt_vehicle_brand"
         android:ems="10" />
 
     <TextView
@@ -53,50 +53,58 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText4"
+        android:layout_below="@+id/edt_vehicle_type"
         android:gravity="center"
         android:text="Settings"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/sp_vehicle_fueltype"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
-        android:entries="@array/country_arrays" />
+        android:entries="@array/array_fueltype" />
 
     <Spinner
-        android:id="@+id/Spinner02"
+        android:id="@+id/sp_vehicle_distance"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/spinner1"
-        android:entries="@array/country_arrays" />
+        android:layout_below="@+id/sp_vehicle_fueltype"
+        android:entries="@array/array_distance" />
 
     <Spinner
-        android:id="@+id/Spinner03"
+        android:id="@+id/sp_vehicle_quantity"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/Spinner02"
+        android:layout_below="@+id/sp_vehicle_distance"
         android:entries="@array/country_arrays" />
 
     <Spinner
-        android:id="@+id/Spinner01"
+        android:id="@+id/sp_vehicle_consumption"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/Spinner03"
-        android:entries="@array/country_arrays" />
+        android:layout_below="@+id/sp_vehicle_quantity"
+        android:entries="@array/array_consumption" />
 
-    <Spinner
-        android:id="@+id/Spinner04"
-        android:layout_width="fill_parent"
+    <TextView
+        android:id="@+id/tv_vehicle_currency"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/Spinner01"
-        android:entries="@array/country_arrays" />
+        android:layout_below="@+id/sp_vehicle_consumption"
+        android:text="Currency Symbol" />
+
+    <EditText
+        android:id="@+id/edt_vehicle_currency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/tv_vehicle_currency"
+        android:ems="1" />
 
     <Button
         android:id="@+id/btn_fragment_vehicle_save"
@@ -105,5 +113,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="Save" />
-
+    
 </RelativeLayout>
