--- a/res/layout/fragment_vehicle.xml
+++ b/res/layout/fragment_vehicle.xml
@@ -3,14 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <!-- Helper View -->
+    <View
+        android:id="@+id/half_screen_helper"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerHorizontal="true" />
+    
+    <!-- Vehicle Information -->
     <TextView
         android:id="@+id/tv_vehicle_information"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:gravity="center"
-        android:text="Information"
+        android:text="@string/vehicle_tv_information"
         android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <EditText
@@ -18,100 +25,139 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignRight="@+id/half_screen_helper"
         android:layout_below="@+id/tv_vehicle_information"
-        android:ems="5" >
-
-        <requestFocus />
-    </EditText>
+        android:hint="@string/vehicle_edt_name"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/edt_vehicle_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tv_vehicle_information"
+        android:layout_toRightOf="@+id/edt_vehicle_name"
+        android:hint="@string/vehicle_edt_year"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/edt_vehicle_make"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignRight="@+id/half_screen_helper"
         android:layout_below="@+id/edt_vehicle_name"
-        android:ems="10" />
+        android:hint="@string/vehicle_edt_make"
+        android:inputType="text" />
 
     <EditText
-        android:id="@+id/edt_vehicle_brand"
+        android:id="@+id/edt_vehicle_model"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/edt_vehicle_year"
-        android:ems="10" />
+        android:layout_toRightOf="@+id/edt_vehicle_make"
+        android:hint="@string/vehicle_edt_model"
+        android:inputType="text" />
 
-    <EditText
-        android:id="@+id/edt_vehicle_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/edt_vehicle_brand"
-        android:ems="10" />
-
+    <!-- Vehicle settings -->
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tv_vehicle_settings"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/edt_vehicle_type"
+        android:layout_below="@+id/edt_vehicle_model"
         android:gravity="center"
-        android:text="Settings"
+        android:text="@string/vehicle_tv_settings"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <Spinner
-        android:id="@+id/sp_vehicle_fueltype"
-        android:layout_width="fill_parent"
+    <!-- Distance -->
+
+    <TextView
+        android:id="@+id/tv_vehicle_distance"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/sp_vehicle_distance"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:entries="@array/array_fueltype" />
+        android:layout_below="@+id/tv_vehicle_settings"
+        android:layout_toLeftOf="@+id/sp_vehicle_distance"
+        android:gravity="center_vertical"
+        android:text="@string/vehicle_tv_distance" />
 
     <Spinner
         android:id="@+id/sp_vehicle_distance"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/sp_vehicle_fueltype"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tv_vehicle_settings"
+        android:layout_alignLeft="@+id/half_screen_helper"
         android:entries="@array/array_distance" />
 
+    <!-- Quantity -->
+
+    <TextView
+        android:id="@+id/tv_vehicle_quantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/sp_vehicle_quantity"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/sp_vehicle_distance"
+        android:layout_toLeftOf="@+id/sp_vehicle_quantity"
+        android:gravity="center_vertical"
+        android:text="@string/vehicle_tv_quantity" />
+    
     <Spinner
         android:id="@+id/sp_vehicle_quantity"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignLeft="@+id/half_screen_helper"
         android:layout_below="@+id/sp_vehicle_distance"
-        android:entries="@array/country_arrays" />
+        android:entries="@array/array_quantity" />
 
+    <!-- Consupmtion -->
+
+    <TextView
+        android:id="@+id/tv_vehicle_consumption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/sp_vehicle_consumption"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/sp_vehicle_quantity"
+        android:layout_toLeftOf="@+id/sp_vehicle_consumption"
+        android:gravity="center_vertical"
+        android:text="@string/vehicle_tv_consumption" />
+    
     <Spinner
         android:id="@+id/sp_vehicle_consumption"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/sp_vehicle_quantity"
+        android:layout_alignLeft="@+id/half_screen_helper"
         android:entries="@array/array_consumption" />
+
+    <!-- Currency -->
 
     <TextView
         android:id="@+id/tv_vehicle_currency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/edt_vehicle_currency"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/sp_vehicle_consumption"
-        android:text="Currency Symbol" />
+        android:layout_toLeftOf="@+id/edt_vehicle_currency"
+        android:gravity="center_vertical"
+        android:text="@string/vehicle_tv_currency" />
 
     <EditText
         android:id="@+id/edt_vehicle_currency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/tv_vehicle_currency"
-        android:ems="1" />
-
-    <Button
-        android:id="@+id/btn_fragment_vehicle_save"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Save" />
+        android:layout_alignLeft="@+id/half_screen_helper"
+        android:layout_below="@+id/sp_vehicle_consumption"
+        android:ems="2"
+        android:maxEms="4"
+        android:inputType="text"
+        android:text="@string/vehicle_edt_currency" />
     
 </RelativeLayout>
