--- a/res/menu/activity_swipe.xml
+++ b/res/menu/activity_swipe.xml
@@ -3,10 +3,10 @@
     <item android:id="@+id/menu_changeVehicle"
         android:title="@string/menu_changeCar"
         android:orderInCategory="200"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="never" />
     
     <item android:id="@+id/menu_logout"
         android:title="@string/menu_logout"
         android:orderInCategory="300"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="never" />
 </menu>
