--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,26 @@
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Black" />
+    <style name="AppTheme" parent="android:Theme.Light" />
+    
+    <style name="LoginContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">16dp</item>
+    </style>
+    
+    <style name="VehicleContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">16dp</item>
+    </style>
 
+    <style name="sectionHeader" parent="android:Widget.Holo.Light.TextView">
+        <item name="android:drawableBottom">@drawable/section_header</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">#FF8800</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
